tests/expectations/compiler/function/annotated_function_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372027]: Unknown annotation: `@test`.
    --> compiler-test:4:5
     |
   4 |     @test
     |     ^^^^^
Error [ETYC0372027]: Unknown annotation: `@program`.
    --> compiler-test:9:5
     |
   9 |     @program
     |     ^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
